--- a/index.html
+++ b/index.html
@@ -154,42 +154,6 @@
     </div>
 </section>
 
-<!-- 6. TIMELINE -->
-<section>
-    <h2 style="font-family: 'Borel', cursive; font-size: 26px;">Hành Trình Yêu Thương</h2>
-    <div class="timeline">
-        <div class="timeline-item">
-            <h4>2019</h4>
-            <p>Chúng tôi gặp nhau lần đầu tiên.</p>
-        </div>
-        <div class="timeline-item">
-            <h4>2021</h4>
-            <p>Chính thức hẹn hò.</p>
-        </div>
-        <div class="timeline-item">
-            <h4>2025</h4>
-            <p>Cầu hôn.</p>
-        </div>
-        <div class="timeline-item">
-            <h4>2026</h4>
-            <p>Về chung một nhà ❤️</p>
-        </div>
-    </div>
-</section>
-
-<section class="dresscode">
-    <h2 class="title">Dress code</h2>
-    <p class="subtitle">Please wear light tones for better photos ✨</p>
-
-    <div class="color-list">
-        <div class="color color1"></div>
-        <div class="color color2"></div>
-        <div class="color color3"></div>
-        <div class="color color4"></div>
-        <div class="color color5"></div>
-    </div>
-</section>
-
 <section class="wish-section">
     <h2 class="wish-title">Gửi Lời Chúc</h2>
 
@@ -215,19 +179,17 @@
     <section class="gallery-intro">
         <div class="gallery-container">
             <p class="gallery-text">
-                Từng khoảnh khắc bên nhau đều là một mảnh ghép quý giá trong câu chuyện tình yêu của chúng tôi. 
-                Từ những ánh nhìn đầu tiên còn e ấp, những lần nắm tay thật khẽ, đến những tiếng cười giòn tan vang lên giữa ngày nắng — tất cả đã dệt nên một hành trình đầy yêu thương và kỷ niệm.
+                Mỗi khoảnh khắc bên nhau đều là một mảnh ghép quý giá trong câu chuyện tình yêu của chúng tôi — từ ánh nhìn đầu tiên, những cái nắm tay dịu dàng đến tiếng cười rộn rã giữa ngày nắng.
             </p>
 
             <p class="gallery-text">
-                Hôm nay, chúng tôi muốn cùng bạn ngắm nhìn lại những hình ảnh đã lưu giữ trọn vẹn niềm vui, sự sẻ chia và cả những phút giây lặng yên ấm áp. 
-                Mỗi bức ảnh không chỉ là một khung hình, mà là một lát cắt của hạnh phúc — nơi tình yêu được vun đắp qua từng ngày.
+                Hôm nay, chúng tôi muốn cùng bạn nhìn lại những hình ảnh lưu giữ niềm vui và hạnh phúc ấy — nơi tình yêu được vun đắp qua từng ngày.
             </p>
         </div>
     </section>
 
     <div class="main-photo">
-        <img id="mainImage" src="https://i.pinimg.com/736x/b7/15/10/b71510d6ade43ccb8026029da8ecb3ef.jpg" alt="">
+        <img id="mainImage" src="Image/DNT_2166.jpg" alt="">
         <div class="main-caption">Our Wedding Day</div>
     </div>
 
@@ -237,38 +199,22 @@
 
             <!-- Nhóm 1 -->
             <div class="polaroid active" data-caption="First Look">
-                <img src="https://i.pinimg.com/736x/b7/15/10/b71510d6ade43ccb8026029da8ecb3ef.jpg">
+                <img src="Image/DNT_2166.jpg">
                 <span>First Look</span>
             </div>
 
             <div class="polaroid" data-caption="Sweet Moment">
-                <img src="https://i.pinimg.com/1200x/60/13/d5/6013d51abd641a7d1db7aabf3fa96c49.jpg">
+                <img src="Image/IMG_8586.jpg">
                 <span>Sweet Moment</span>
             </div>
 
             <div class="polaroid" data-caption="Together Forever">
-                <img src="https://i.pinimg.com/736x/3e/ea/b1/3eeab18c5ce8b3dbdb12bdf62d02ba44.jpg">
+                <img src="Image/DNT_2194.jpg">
                 <span>Together Forever</span>
             </div>
 
             <div class="polaroid" data-caption="Love Story">
-                <img src="https://i.pinimg.com/736x/2c/85/cf/2c85cff2ee3224e26a7a44a3b880bf24.jpg">
-                <span>Love Story</span>
-            </div>
-
-            <!-- Nhân đôi để chạy vô hạn -->
-            <div class="polaroid">
-                <img src="https://i.pinimg.com/736x/b7/15/10/b71510d6ade43ccb8026029da8ecb3ef.jpg">
-                <span>First Look</span>
-            </div>
-
-            <div class="polaroid" data-caption="Together Forever">
-                <img src="https://i.pinimg.com/736x/3e/ea/b1/3eeab18c5ce8b3dbdb12bdf62d02ba44.jpg">
-                <span>Together Forever</span>
-            </div>
-
-            <div class="polaroid" data-caption="Love Story">
-                <img src="https://i.pinimg.com/736x/2c/85/cf/2c85cff2ee3224e26a7a44a3b880bf24.jpg">
+                <img src="Image/DNT_2020.jpg">
                 <span>Love Story</span>
             </div>
 
