--- a/index.html
+++ b/index.html
@@ -68,39 +68,20 @@
 
     <div class="love-message">
         <p>
-            Chúng tôi gặp nhau như một sự tình cờ, nhưng lại ở bên nhau như một điều đã được định sẵn.
-            Giữa dòng đời rộng lớn, hai trái tim đã tìm thấy nhau bằng sự chân thành và thấu hiểu.
+            Chúng tôi gặp nhau như một sự tình cờ, nhưng ở bên nhau như một điều đã được định sẵn. 
+            Từ những buổi hẹn giản dị đến những ngày cùng nhau vượt qua nắng mưa, 
+            tình yêu lớn dần bằng sự chân thành và thấu hiểu.
         </p>
 
         <p>
-            Từ những tin nhắn vu vơ, những buổi hẹn hò giản dị, những lần cùng nhau đi qua những ngày nắng đẹp
-            và cả những cơn mưa bất chợt, tình cảm lớn lên từng ngày.
-            Không ồn ào, không vội vã, chỉ là những yêu thương âm thầm nhưng sâu sắc.
+            Sau hành trình sẻ chia, đồng hành và vun đắp từng ngày, 
+            chúng tôi quyết định nắm tay nhau bước sang một chặng đường mới — 
+            hành trình của gắn bó và yêu thương trọn vẹn.
         </p>
 
         <p>
-            Chúng tôi đã cùng nhau chia sẻ những ước mơ, những dự định tương lai,
-            cùng động viên nhau trong những lúc khó khăn,
-            và cùng mỉm cười khi nhìn lại quãng đường đã đi qua.
-            Mỗi khoảnh khắc đều trở thành một phần ký ức đẹp đẽ không thể nào quên.
-        </p>
-
-        <p>
-            Và giờ đây, khi tình yêu đã đủ đầy và chín muồi,
-            chúng tôi quyết định nắm tay nhau bước sang một hành trình mới —
-            hành trình của sự gắn bó, của trách nhiệm và của yêu thương trọn vẹn.
-        </p>
-
-        <p>
-            Đám cưới không chỉ là một buổi lễ,
-            mà là cột mốc đánh dấu sự khởi đầu cho một mái ấm,
-            nơi có tiếng cười, sự sẻ chia và những tháng năm đồng hành phía trước.
-        </p>
-
-        <p>
-            Chúng tôi trân trọng kính mời bạn đến chung vui trong ngày đặc biệt ấy,
-            để cùng chứng kiến khoảnh khắc thiêng liêng khi hai chúng tôi chính thức về chung một nhà,
-            và để niềm hạnh phúc ấy được trọn vẹn hơn nhờ sự hiện diện của bạn.
+            Chúng tôi trân trọng kính mời bạn đến chung vui trong ngày đặc biệt ấy, 
+            để hạnh phúc được trọn vẹn hơn nhờ sự hiện diện của bạn.
         </p>
     </div>
 
