--- a/index.html
+++ b/index.html
@@ -371,9 +371,18 @@
     </span>
 </div>
 
+<audio id="bgMusic" loop>
+    <source src="music/Shane Filan - Beautiful In White (Official Video) - (320 Kbps).mp3" type="audio/mpeg">
+</audio>
+
+<div id="musicControl" class="music-control">⏸</div>
+
+
+
 <script src="Js/Date.js"></script>
 <script src="Js/seed.js"></script>
 <script src="Js/Image.js"></script>
+<script src="Js/music.js"></script>
 <script>
 function toggleMap(){
     const map = document.getElementById("mapBox");
