--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- 1. ẢNH ĐẦU -->
 
-<section class="hero" style="background-image: url('Image/DNT_2020.jpg');">
+<section class="hero" style="background-image: url('Image/QUYS6235.JPG');">
 
     <div class="hero-content">
         <!-- <div class="sub-title">We Get Married</div> -->
@@ -49,7 +49,7 @@
                 <p class="parents">Con Bà: Trần Thị B</p>
             </div>
 
-            <img src="Image/DNT_2166.jpg" alt="Chú rể" class="img-left">
+            <img src="Image/chú rể.jpg" alt="Chú rể" class="img-left">
         </div>
 
         <!-- CÔ DÂU -->
@@ -90,7 +90,7 @@
 <!-- 3. ẢNH -->
 <section>
     <div class="gallery">
-        <img src="Image/DNT_2194.jpg">
+        <img src="Image/QUYS5995.JPG">
     </div>
 </section>
 
@@ -103,7 +103,7 @@
         <span class="organization-lile">Tư gia Nhà gái</span>
         <p><strong>Thời gian:</strong> 18:00 - Thứ Bảy</p>
         <p><strong>Ngày:</strong> 14/03/2026</p>
-        <p><strong>Địa điểm:</strong> White Palace - TP.HCM</p>
+        <p><strong>Địa điểm:</strong> Số nhà 11/ ngõ 185/ thôn Phú Đa/ xã Đức Thượng/ huyện Hoài Đức/ TP. Hà Nội.</p>
 
         <button class="map-btn" onclick="toggleMap()">Xem Địa Chỉ</button>
 
@@ -146,8 +146,8 @@
 
     <form id="wishForm">
         <input type="text" id="name" placeholder="Họ tên" required>
-        <textarea id="message" placeholder="Lời chúc" required></textarea>
-        <button type="submit">💗 Send</button>
+        <textarea id="message" placeholder="Lời chúc..." required></textarea>
+        <button type="submit">💗 Gửi lời chúc</button>
         
         <p id="status"></p>
         <div id="wishList"></div>
@@ -170,39 +170,60 @@
     </section>
 
     <div class="main-photo">
-        <img id="mainImage" src="Image/DNT_2166.jpg" alt="">
+        <img id="mainImage" src="Image/ẢNH TREO TƯỜNG/QUYS5884.JPG" alt="">
         <div class="main-caption">Our Wedding Day</div>
     </div>
 
     <div class="polaroid-thumbs">
-
         <div class="thumb-track">
 
-            <!-- Nhóm 1 -->
-            <div class="polaroid active" data-caption="First Look">
-                <img src="Image/DNT_2166.jpg">
-                <span>First Look</span>
+            <div class="polaroid active">
+                <img src="Image/ẢNH TREO TƯỜNG/QUYS5884.JPG" alt="Wedding Photo">
+                <span>Wishing you endless love</span>
             </div>
 
-            <div class="polaroid" data-caption="Sweet Moment">
-                <img src="Image/IMG_8586.jpg">
-                <span>Sweet Moment</span>
+            <div class="polaroid">
+                <img src="Image/ẢNH TREO TƯỜNG/QUYS6066.JPG" alt="Wedding Photo">
+                <span>Forever starts today</span>
             </div>
 
-            <div class="polaroid" data-caption="Together Forever">
-                <img src="Image/DNT_2194.jpg">
-                <span>Together Forever</span>
+            <div class="polaroid">
+                <img src="Image/ẢNH TREO TƯỜNG/QUYS6798.JPG" alt="Wedding Photo">
+                <span>Love always wins</span>
             </div>
 
-            <div class="polaroid" data-caption="Love Story">
-                <img src="Image/DNT_2020.jpg">
-                <span>Love Story</span>
+            <div class="polaroid">
+                <img src="Image/ẢNH TREO TƯỜNG/QUYS6095.JPG" alt="Wedding Photo">
+                <span>Cheers to forever</span>
+            </div>
+
+            <div class="polaroid">
+                <img src="Image/ẢNH TREO TƯỜNG/QUYS6114.JPG" alt="Wedding Photo">
+                <span>Two hearts, one soul</span>
+            </div>
+
+            <div class="polaroid">
+                <img src="Image/ẢNH TREO TƯỜNG/QUYS6176.JPG" alt="Wedding Photo">
+                <span>Bound by love</span>
+            </div>
+
+            <div class="polaroid">
+                <img src="Image/ẢNH TREO TƯỜNG/QUYS6775.JPG" alt="Wedding Photo">
+                <span>Happiness ever after</span>
+            </div>
+
+            <div class="polaroid">
+                <img src="Image/ẢNH TREO TƯỜNG/QUYS6235.JPG" alt="Wedding Photo">
+                <span>A lifetime of happiness</span>
+            </div>
+
+            <div class="polaroid">
+                <img src="Image/ẢNH TREO TƯỜNG/QUYS6608.JPG" alt="Wedding Photo">
+                <span>Always and forever</span>
             </div>
 
         </div>
-
     </div>
-
 </section>
 
 <section class="rsvp-section">
