--- a/test.html
+++ b/test.html
@@ -3,221 +3,226 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gift QR</title>
+<title>Gửi Lời Chúc</title>
+
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Be+Vietnam+Pro:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
-body {
-    font-family: Georgia, serif;
-    background: #faf6f2;
-    margin: 0;
-    padding: 40px;
+body{
+    margin:0;
+    font-family:'Be Vietnam Pro', sans-serif;
+    background:#f5efe8;
+    color:#6d5c4b;
 }
 
-/* ===== CARD ===== */
-.gift-boxes {
-    display: flex;
-    gap: 40px;
-    justify-content: center;
-    flex-wrap: wrap;
+/* ===== SECTION ===== */
+.wish-section{
+    padding:100px 20px;
+    text-align:center;
 }
 
-.gift-card {
-    background: #fff;
-    padding: 25px;
-    border-radius: 20px;
-    width: 280px;
-    text-align: center;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+.wish-header h2{
+    font-family:'Playfair Display', serif;
+    font-size:40px;
+    margin-bottom:15px;
+    color:#5e4b3c;
 }
 
-.gift-card h3 {
-    color: #6b4f43;
+.wish-header p{
+    max-width:600px;
+    margin:0 auto 60px;
+    line-height:1.8;
+    font-size:15px;
+    color:#8b7765;
 }
 
-.qr-box img {
-    width: 200px;
-    margin: 15px 0;
+/* ===== CONTAINER 2 CỘT ===== */
+.wish-container{
+    max-width:1100px;
+    margin:auto;
+    display:flex;
+    gap:50px;
+    align-items:flex-start;
+    justify-content:center;
+    flex-wrap:wrap;
 }
 
-.gift-actions {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+/* ===== FORM ===== */
+.wish-form{
+    flex:1;
+    min-width:320px;
+    background:rgba(255,255,255,0.7);
+    backdrop-filter:blur(10px);
+    padding:40px;
+    border-radius:20px;
+    box-shadow:0 25px 40px rgba(0,0,0,0.08);
 }
 
-button {
-    padding: 10px;
-    border: none;
-    border-radius: 30px;
-    background: #e8d8cd;
-    cursor: pointer;
-    font-weight: 500;
+.wish-form input,
+.wish-form textarea{
+    width:100%;
+    padding:15px;
+    margin-bottom:20px;
+    border:none;
+    border-radius:12px;
+    background:#f3ede6;
+    font-family:'Be Vietnam Pro', sans-serif;
+    font-size:14px;
+    outline:none;
 }
 
-button:hover {
-    background: #d9c2b3;
+.wish-form textarea{
+    height:120px;
+    resize:none;
 }
 
-/* ===== DIALOG ===== */
-.dialog-overlay {
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.35);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    visibility: hidden;
-    transition: 0.3s ease;
-    z-index: 9999;
+.wish-form button{
+    width:100%;
+    padding:14px;
+    border:none;
+    border-radius:50px;
+    background:linear-gradient(135deg,#e8d5c0,#d4bfa6);
+    font-weight:600;
+    letter-spacing:1px;
+    cursor:pointer;
+    transition:0.3s ease;
+    color:#5e4b3c;
 }
 
-.dialog-overlay.active {
-    opacity: 1;
-    visibility: visible;
+.wish-form button:hover{
+    transform:translateY(-3px);
+    box-shadow:0 10px 20px rgba(0,0,0,0.15);
 }
 
-.dialog-box {
-    background: #fdf8f4;
-    padding: 30px 40px;
-    border-radius: 20px;
-    text-align: center;
-    box-shadow: 0 20px 50px rgba(0,0,0,0.15);
-    animation: fadeUp 0.4s ease;
-    color: #6b4f43;
+#status{
+    margin-top:15px;
+    font-size:14px;
+    color:#9b7c5d;
 }
 
-.dialog-box p {
-    margin-bottom: 20px;
-    font-size: 16px;
+/* ===== DANH SÁCH ===== */
+.wish-list{
+    flex:1;
+    min-width:320px;
+    max-height:420px;
+    overflow-y:auto;
+    padding-right:10px;
 }
 
-.dialog-box button {
-    padding: 8px 20px;
-    border-radius: 30px;
+/* Scrollbar */
+.wish-list::-webkit-scrollbar{
+    width:6px;
+}
+.wish-list::-webkit-scrollbar-thumb{
+    background:#d4bfa6;
+    border-radius:10px;
 }
 
-@keyframes fadeUp {
-    from {
-        transform: translateY(20px);
-        opacity: 0;
+/* ITEM */
+.wish-item{
+    background:#f7f1ea;
+    padding:20px;
+    border-radius:15px;
+    margin-bottom:20px;
+    text-align:left;
+    box-shadow:0 5px 15px rgba(0,0,0,0.05);
+    animation:fadeInUp 0.6s ease;
+}
+
+.wish-name{
+    font-weight:600;
+    margin-bottom:5px;
+    color:#5e4b3c;
+}
+
+.wish-message{
+    font-size:14px;
+    line-height:1.6;
+    color:#7b6958;
+}
+
+/* Animation */
+@keyframes fadeInUp{
+    from{
+        opacity:0;
+        transform:translateY(20px);
     }
-    to {
-        transform: translateY(0);
-        opacity: 1;
+    to{
+        opacity:1;
+        transform:translateY(0);
+    }
+}
+
+/* ===== MOBILE ===== */
+@media(max-width:768px){
+    .wish-container{
+        flex-direction:column;
     }
 }
 </style>
 </head>
 <body>
 
-<div class="gift-boxes">
+<section class="wish-section">
 
-    <!-- ===== CHÚ RỂ ===== -->
-    <div class="gift-card groom-card">
-        <h3>MỪNG CƯỚI ĐẾN<br>CHÚ RỂ</h3>
-
-        <div class="qr-box">
-            <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=Groom">
-        </div>
-
-        <div class="gift-actions">
-            <button class="copy-groom">Copy STK</button>
-        </div>
-
-        <div class="groom-bank" style="display:none;">
-            <p class="groom-bank-name">MB Bank</p>
-            <p class="groom-bank-number">0123456789</p>
-            <p class="groom-bank-owner">NGUYỄN VĂN A</p>
-        </div>
+    <div class="wish-header">
+        <h2>Gửi Lời Chúc</h2>
+        <p>
+            Mỗi lời chúc, mỗi sự hiện diện đều là điều đáng quý mà
+            chúng tôi luôn trân trọng. Cảm ơn vì bạn đã là một phần
+            trong ngày đặc biệt này.
+        </p>
     </div>
 
+    <div class="wish-container">
 
-    <!-- ===== CÔ DÂU ===== -->
-    <div class="gift-card bride-card">
-        <h3>MỪNG CƯỚI ĐẾN<br>CÔ DÂU</h3>
+        <!-- FORM -->
+        <form id="wishForm" class="wish-form">
+            <input type="text" id="name" placeholder="Họ tên" required>
+            <textarea id="message" placeholder="Lời chúc" required></textarea>
+            <button type="submit">💗 Gửi lời chúc</button>
+            <p id="status"></p>
+        </form>
 
-        <div class="qr-box">
-            <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=Bride">
-        </div>
+        <!-- LIST -->
+        <div class="wish-list" id="wishList"></div>
 
-        <div class="gift-actions">
-            <button class="copy-bride">Copy STK</button>
-        </div>
-
-        <div class="bride-bank" style="display:none;">
-            <p class="bride-bank-name">Vietcombank</p>
-            <p class="bride-bank-number">987654321</p>
-            <p class="bride-bank-owner">TRẦN THỊ B</p>
-        </div>
     </div>
 
-</div>
-
-
-<!-- ===== DIALOG ===== -->
-<div id="copyDialog" class="dialog-overlay">
-    <div class="dialog-box">
-        <p id="dialogMessage">Đã sao chép thành công 💌</p>
-        <button id="closeDialog">Đóng</button>
-    </div>
-</div>
-
+</section>
 
 <script>
-// ===== SHOW DIALOG =====
-function showDialog(message) {
-    const dialog = document.getElementById("copyDialog");
-    const msg = document.getElementById("dialogMessage");
+const form = document.getElementById("wishForm");
+const wishList = document.getElementById("wishList");
+const statusText = document.getElementById("status");
 
-    msg.innerText = message;
-    dialog.classList.add("active");
+form.addEventListener("submit", function(e){
+    e.preventDefault();
 
-    // Tự đóng sau 2.5s
+    const name = document.getElementById("name").value.trim();
+    const message = document.getElementById("message").value.trim();
+
+    if(name === "" || message === ""){
+        return;
+    }
+
+    const wishItem = document.createElement("div");
+    wishItem.classList.add("wish-item");
+
+    wishItem.innerHTML = `
+        <div class="wish-name">${name}</div>
+        <div class="wish-message">${message}</div>
+    `;
+
+    wishList.prepend(wishItem);
+
+    statusText.textContent = "💌 Lời chúc đã được gửi!";
+    form.reset();
+
     setTimeout(() => {
-        dialog.classList.remove("active");
-    }, 2500);
-}
-
-// ===== ĐÓNG DIALOG KHI BẤM NÚT =====
-document.getElementById("closeDialog").addEventListener("click", function() {
-    document.getElementById("copyDialog").classList.remove("active");
-});
-
-// ===== COPY CHÚ RỂ =====
-document.querySelector(".copy-groom").addEventListener("click", function () {
-
-    const bankName = document.querySelector(".groom-bank-name").innerText;
-    const bankNumber = document.querySelector(".groom-bank-number").innerText;
-    const bankOwner = document.querySelector(".groom-bank-owner").innerText;
-
-    const text = `Ngân hàng: ${bankName}
-STK: ${bankNumber}
-Chủ tài khoản: ${bankOwner}`;
-
-    navigator.clipboard.writeText(text).then(() => {
-        showDialog("Đã sao chép thông tin chú rể 💌");
-    }).catch(() => {
-        showDialog("Không thể sao chép ❌");
-    });
-});
-
-// ===== COPY CÔ DÂU =====
-document.querySelector(".copy-bride").addEventListener("click", function () {
-
-    const bankName = document.querySelector(".bride-bank-name").innerText;
-    const bankNumber = document.querySelector(".bride-bank-number").innerText;
-    const bankOwner = document.querySelector(".bride-bank-owner").innerText;
-
-    const text = `Ngân hàng: ${bankName}
-STK: ${bankNumber}
-Chủ tài khoản: ${bankOwner}`;
-
-    navigator.clipboard.writeText(text).then(() => {
-        showDialog("Đã sao chép thông tin cô dâu 💐");
-    }).catch(() => {
-        showDialog("Không thể sao chép ❌");
-    });
+        statusText.textContent = "";
+    }, 3000);
 });
 </script>
 
