--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <div class="map-box" id="mapBox">
             <iframe 
-                src="https://www.google.com/maps?q=White+Palace+HCM&output=embed"
+                src="https://www.google.com/maps/embed?pb=!1m13!1m11!1m3!1d149.2203875090924!2d105.69260540846366!3d21.075745138605434!2m2!1f0!2f1.947462156074925!3m2!1i1024!2i768!4f51.46705254015262!5e1!3m2!1svi!2s!4v1771144897549!5m2!1svi!2s"
                 width="100%" height="250" style="border:0;">
             </iframe>
         </div>
@@ -262,7 +262,7 @@
 
                     <label class="guest-card">
                         <input type="radio" name="guestOf">
-                        <img src="Image/DNT_2166.jpg" alt="">
+                        <img src="Image/chú rể.jpg" alt="">
                         <span>Chú Rể</span>
                     </label>
 
@@ -312,7 +312,7 @@
                 <h3>MỪNG CƯỚI ĐẾN<br>CHÚ RỂ</h3>
 
                 <div class="qr-box">
-                    <img src="Image/DNT_2166.jpg">
+                    <img src="Image/chú rể.jpg">
                 </div>
 
                 <div class="gift-actions">
